build: add argon package

--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "@nestjs/passport": "^10.0.3",
     "@nestjs/platform-express": "^10.0.0",
     "@prisma/client": "^5.20.0",
+    "argon2": "^0.41.1",
     "openapi3-ts": "^4.4.0",
     "passport": "^0.7.0",
     "passport-jwt": "^4.0.1",
